tests/const_missing_init_top.stderr
tests/const_missing_init_top.hop:2:1: error: HOP2028: const declaration requires initializer
