tests/const_missing_init_top.hop
// Verifies const missing initialization top-level.
const X i32

fn main() {}
